--- a/userstyle.css
+++ b/userstyle.css
@@ -55,6 +55,29 @@ pre {
   padding-left: 2.25em !important;
 }
 
+.chat-message.last-read-message {
+  background-image: none !important;
+}
+
+.chat-message .last-read-message-text {
+  width: 150px !important;
+  background:rgba(50, 150, 210, 0.105) !important;
+  color: rgba(50, 150, 210, 1) !important;
+  font-weight: 600;
+}
+
+.typing-users {
+  padding: 0 10px !important;
+  border-radius: 3px 3px 0 0 !important;
+  background: rgba(0,0,0,0.15) !important;
+  color: #555 !important;
+}
+
+/* for testing */
+.typing-users:empty {
+  display: inline !important;
+}
+
 /* fix seen icon spacing */
 .private .message-seen::after {
   left: 1em !important;
